@@ -1,5 +1,6 @@
 # 3.19.0 (2025-XX-XX)
 
+ * Make `{}` optional for the `types` tag
  * Add `LastModifiedExtensionInterface` and implementation in `AbstractExtension` to track modification of runtime classes
 
 # 3.18.0 (2024-12-29)
